--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@ body {
   padding: 40px;
 }
 
+/* MAIN LAYOUT */
+
 .header {
   margin-bottom: 40px;
   display: flex;
@@ -18,17 +20,25 @@ body {
   justify-content: space-between;
 }
 
-.logo {
-  display: flex;
-  align-items: center;
-  gap: 16px;
-}
-
 .fact-form {
   background-color: #44403c;
   margin-bottom: 40px;
   padding: 16px 40px;
   text-align: center;
+}
+
+.main {
+  display: grid;
+  grid-template-columns: 250px 1fr;
+  gap: 48px;
+}
+
+/* ELEMENTS */
+
+.logo {
+  display: flex;
+  align-items: center;
+  gap: 16px;
 }
 
 h1 {
@@ -45,6 +55,10 @@ h1 {
   background-color: #44403c;
   margin-bottom: 16px;
   padding: 16px 24px;
+  letter-spacing: -1px;
+  display: flex;
+  align-items: center;
+  gap: 24px;
 }
 
 .tag {
@@ -54,6 +68,10 @@ h1 {
   padding-top: 3px;
   padding-left: 10px;
   padding-right: 10px;
+}
+
+.vote-buttons {
+  margin-left: auto;
 }
 
 ul {
