--- a/style.css
+++ b/style.css
@@ -8,10 +8,15 @@ body {
   background-color: #292524;
   color: #fafaf9;
   font-family: 'Sono', sans-serif;
-  padding: 40px;
+  padding: 48px 64px;
 }
 
 /* MAIN LAYOUT */
+
+.container {
+  max-width: 1500px;
+  margin: 0 auto;
+}
 
 .header {
   margin-bottom: 40px;
@@ -39,6 +44,11 @@ body {
   display: flex;
   align-items: center;
   gap: 16px;
+}
+
+.logo img {
+  width: 68px;
+  height: 68px;
 }
 
 h1 {
@@ -76,4 +86,18 @@ h1 {
 
 ul {
   list-style: none;
+}
+
+/* The order should be link, visted, hover then active */
+.source:link,
+.source:visited {
+  color: #a8a29e;
+  text-decoration: none;
+  margin-left: 12px;
+  transition: 0.3s;
+}
+
+.source:hover,
+.source:active {
+  color: #3b82f6;
 }
