--- a/today-i-learned/src/style.css
+++ b/today-i-learned/src/style.css
@@ -8,15 +8,28 @@ body {
   background-color: #292524;
   color: #fafaf9;
   font-family: 'Sono', sans-serif;
-  padding: 48px 64px;
+  padding: 48px 64px 0px;
 }
 
 .hidden {
   display: none !important;
 }
 
-/* MAIN LAYOUT */
+.message {
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 32px;
+  font-weight: 600;
+  margin-top: 24px;
+}
 
+.disputed {
+  color: #ef4444;
+  font-weight: 600;
+  margin-right: 10px;
+}
+
+/* MAIN LAYOUT */
 #root {
   max-width: 1500px;
   margin: 0 auto;
@@ -33,12 +46,21 @@ body {
   display: grid;
   grid-template-columns: 250px 1fr;
   gap: 48px;
+
+  height: calc(100vh - 48px - 68px - 40px);
 }
 
 @media (max-width: 900px) {
   .main {
     grid-template-columns: 1fr;
+    /* Fixed in a video text overlay, to fix scrolling issue on small screens */
+    height: auto;
   }
+}
+
+section {
+  overflow: scroll;
+  padding-bottom: 40px;
 }
 
 /* ELEMENTS */
@@ -57,7 +79,7 @@ body {
 h1 {
   font-size: 42px;
   text-transform: uppercase;
-  font-family: 'Coiny', cursive;
+  font-family: 'Coiny', sans-serif;
   line-height: 1;
   margin-top: 6px;
 }
@@ -74,6 +96,7 @@ h1 {
   padding: 16px 24px;
   letter-spacing: -1px;
   border-radius: 16px;
+
   display: flex;
   align-items: center;
   gap: 24px;
@@ -90,7 +113,7 @@ h1 {
 .tag {
   text-transform: uppercase;
   font-size: 14px;
-  font-family: 'Coiny', cursive;
+  font-family: 'Coiny', sans-serif;
   padding-top: 3px;
   padding-left: 10px;
   padding-right: 10px;
@@ -100,6 +123,7 @@ h1 {
 .vote-buttons {
   margin-left: auto;
   flex-shrink: 0;
+
   display: flex;
   gap: 8px;
 }
@@ -121,11 +145,14 @@ h1 {
   background-color: #292524;
 }
 
+.vote-buttons button:disabled {
+  background-color: #44403c;
+}
+
 ul {
   list-style: none;
 }
 
-/* The order should be link, visted, hover then active */
 .source:link,
 .source:visited {
   color: #a8a29e;
@@ -172,6 +199,7 @@ ul {
   background-image: none;
 }
 
+/* FORM */
 .fact-form {
   background-color: #44403c;
   margin-bottom: 40px;
@@ -210,7 +238,7 @@ ul {
 
 @media (max-width: 1000px) {
   body {
-    padding: 32px 48px;
+    /* padding: 32px 48px; */
   }
 
   .fact-form {
